# ntgcalls

./: .gitmodules  CMakeLists.txt
ntgcalls/: ntgcalls.cpp
ntgcalls/instances/: p2p_call.cpp
ntgcalls/signaling/: signaling_interface.cpp
ntgcalls/signaling/crypto/: signaling_encryption.cpp
ntgcalls_x/: CMakeLists.txt  file_parser.cpp  file_parser.hpp  ntgcalls.cpp  ntgcalls.hpp
ntgcalls_x/bindings/: pythonapi.cpp
ntgcalls_x/models/: call_payload.cpp  call_payload.hpp
wrtc/interfaces/: native_connection.cpp  native_connection.hpp  sctp_data_channel_provider_interface_impl.cpp  sctp_data_channel_provider_interface_impl.hpp
wrtc/interfaces/media/: channel_manager.cpp  channel_manager.hpp
wrtc/interfaces/media/channels/: outgoing_audio_channel.cpp
wrtc/interfaces/peer_connection/: peer_connection_factory.cpp
